Allow edit credit request

--- a/assets/modules/credit/views/form.html
+++ b/assets/modules/credit/views/form.html
@@ -41,7 +41,7 @@
         <div class="row">
             <div class="form-group col-sm-1">
                 <label for="inputEmail3" class="control-label">Posición</label>
-                <input name="position" type="input" class="form-control" ng-model="page.data.position" placeholder="0">
+                <input name="position" type="input" class="form-control" ng-model="credit.data.position" placeholder="0">
             </div>
         </div>
         
