--- a/assets/modules/creditRequest/views/view.html
+++ b/assets/modules/creditRequest/views/view.html
@@ -6,88 +6,98 @@
     <li class="active">Credito</li>
 </ol>
 
+<div ng-show="creditView.form.success">
+    <div class="alert alert-success" role="alert">Elemento editado correctamente.</div>
+    <a href="#/request/credit" class="btn btn-warning">Regresar</a>
+</div>
 
-<h3 class="text-center">Solicitud de Crédito</h3>
-
-<form class="form-horizontal" name="creditView.form" role="form" ng-submit="creditView.submit()">
-    <div class="form-group">
-        <label for="inputEmail3" class="col-sm-2 control-label">Crédito</label>
-        <div class="col-sm-10">
-            <h4>{{creditView.data.credit.name}}</h4>
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label for="inputEmail3" class="col-sm-2 control-label">Tasa de interes</label>
-        <div class="col-sm-10">
-            <h6>{{creditView.data.data.rate}}</h6>
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label for="inputEmail3" class="col-sm-2 control-label">Interes seguros</label>
-        <div class="col-sm-10">
-            <h6>{{creditView.data.data.insurance}}</h6>
-        </div>
-    </div>
-    
-    <div class="form-group">
-        <label for="inputEmail3" class="col-sm-2 control-label">Procesado</label>
-        <div class="col-sm-10">
-            <input type="checkbox" ng-model="creditView.data.processed" ng-change="creditView.process()"/>
-        </div>
-    </div>
-   
-    <hr>
-
-    <div class="form-group">
-        <label for="inputEmail3" class="col-sm-2 control-label">Solicitante</label>
-        <div class="col-sm-10" ng-if="creditView.data.user.username">            
-            <li><b>Cédula:</b> {{creditView.data.user.username}}</li>
-            <li><b>Nombre:</b> {{creditView.data.user.name}}</li>
-            <li><b>E-mail:</b> {{creditView.data.user.email}}</li>            
+<div ng-show="!creditView.form.success">   
+    <form class="form-horizontal" name="creditView.form" role="form" ng-submit="creditView.submit()">
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-2 control-label">Crédito</label>
+            <div class="col-sm-10">
+                <h4>{{creditView.data.credit.name}}</h4>
+            </div>
         </div>
 
-        <div class="col-sm-10" ng-if="!creditView.data.user.username">            
-            <h6>Solicitante Vacio.</h6>       
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-2 control-label">Tasa de interes</label>
+            <div class="col-sm-10">
+                <h6>{{creditView.data.data.rate}}</h6>
+            </div>
         </div>
-    </div>
-    
-    <div class="form-group">
-        <label for="inputPassword3" class="col-sm-2 control-label">Fecha de envío solicitud:</label>
-        <div class="col-sm-10">
-            <h5>{{creditView.data.add_date}}</h5>
-        </div>
-    </div>
 
-    <div class="form-group">
-        <label for="inputPassword3" class="col-sm-2 control-label">Monto: </label>
-        <div class="col-sm-10">
-            <input type="number" step="0.1"  required="true" class="form-control" ng-model="creditView.data.data.amount" />
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-2 control-label">Interes seguros</label>
+            <div class="col-sm-10">
+                <h6>{{creditView.data.data.insurance}}</h6>
+            </div>
         </div>
-    </div>
-
-    <div class="form-group">
-        <label for="inputPassword3" class="col-sm-2 control-label">Periodo (Meses):</label>
-        <div class="col-sm-10">
-            <input type="number" step="1" required="true" class="form-control" ng-model="creditView.data.data.months"/>
+        
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-2 control-label">Procesado</label>
+            <div class="col-sm-10">
+                <input type="checkbox" ng-model="creditView.data.processed" ng-change="creditView.process()"/>
+            </div>
         </div>
-    </div>
+       
+        <hr>
 
-    <div class="form-group">
-        <label for="inputPassword3" class="col-sm-2 control-label">Cuota:</label>
-        <div class="col-sm-10">
-            <h5 ng-if="creditView.data.data.fee">{{creditView.data.data.fee | currency:"$ ":4}}</h5>
-            <h5 ng-if="!creditView.data.data.fee">No calculado</h5>
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-2 control-label">Solicitante</label>
+            <div class="col-sm-10" ng-if="creditView.data.user.username">            
+                <li><b>Cédula:</b> {{creditView.data.user.username}}</li>
+                <li><b>Nombre:</b> {{creditView.data.user.name}}</li>
+                <li><b>E-mail:</b> {{creditView.data.user.email}}</li>            
+            </div>
+
+            <div class="col-sm-10" ng-if="!creditView.data.user.username">            
+                <h6>Solicitante Vacio.</h6>       
+            </div>
         </div>
-    </div>
-
-    <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-primary">Editar</button>
-            <a href="#/request/credit" class="btn btn-warning">Regresar</a>                
+        
+        <div class="form-group">
+            <label for="inputPassword3" class="col-sm-2 control-label">Fecha de envío solicitud:</label>
+            <div class="col-sm-10">
+                <h5>{{creditView.data.add_date}}</h5>
+            </div>
         </div>
-    </div>
-</form>
 
+        <div class="form-group">
+            <label for="inputPassword3" class="col-sm-2 control-label">Monto: </label>
+            <div class="col-sm-10">
+                <input type="number" step="0.1"  required="true" class="form-control" ng-model="creditView.data.data.amount" />
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="inputPassword3" class="col-sm-2 control-label">Periodo (Meses):</label>
+            <div class="col-sm-10">
+                <input type="number" step="1" required="true" class="form-control" ng-model="creditView.data.data.months"/>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="inputPassword3" class="col-sm-2 control-label">Observación:</label>
+            <div class="col-sm-10">
+                <textarea class="form-control" ng-model="creditView.data.observation" name="" id="" cols="30" rows="10" required="false"></textarea>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="inputPassword3" class="col-sm-2 control-label">Cuota:</label>
+            <div class="col-sm-10">
+                <h5 ng-if="creditView.data.data.fee">{{creditView.data.data.fee | currency:"$ ":4}}</h5>
+                <h5 ng-if="!creditView.data.data.fee">No calculado</h5>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" class="btn btn-primary">Editar</button>
+                <a href="#/request/credit" class="btn btn-warning">Regresar</a>                
+            </div>
+        </div>
+    </form>
+</div>
 
