add witdh property

--- a/assets/modules/creditRequest/views/list.html
+++ b/assets/modules/creditRequest/views/list.html
@@ -8,7 +8,7 @@
 <list-view 
     fields="[
         {'name':'user.username', 'label':'Cedula', 'type': 'string'},
-        {'name':'observation', 'label':'Observación', 'type': 'string'},
+        {'name':'observation', 'label':'Observación', 'type': 'string', 'width':30},
         {'name':'user.name', 'label':'Nombre', 'type': 'string', width:'30'},
         {'name':'credit.name', 'label':'Credito', 'type': 'string'},
         {'name':'data.amount', 'label':'Monto', 'type': 'currency'},
