--- a/assets/modules/credit/views/form.html
+++ b/assets/modules/credit/views/form.html
@@ -69,6 +69,15 @@
             </div>
         </div>
 
+        <div class="row">
+            <div class="form-group col-sm-10">
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox" ng-model="credit.data.amortization"> Mostrar amortización
+                    </label>
+                </div>
+            </div>
+        </div>
 
         <div class="dinamyc-forms">
 
