Update filters in list view

--- a/assets/modules/cooperative/views/email-list.html
+++ b/assets/modules/cooperative/views/email-list.html
@@ -11,7 +11,7 @@
         {'name':'email', 'label':'Fecha', 'type': 'string'},
     ]"
 
-    filters="['name, email']" 
+    filters="['search']" 
 
     actions="['add', 'edit', 'delete']"
     
