--- a/assets/modules/credit/views/list.html
+++ b/assets/modules/credit/views/list.html
@@ -13,7 +13,7 @@
         {'name':'insurance', 'label':'Seguro', 'type': 'string'},
     ]"
 
-    filters="['code', 'name']" 
+    filters="['search']" 
 
     actions="['add', 'edit', 'delete']"
 
