--- a/assets/modules/creditRequest/views/list.html
+++ b/assets/modules/creditRequest/views/list.html
@@ -15,8 +15,8 @@
         {'name':'processed', 'label':'Proc.', 'type': 'bool'},
         
     ]"
-
-    filters="['title', 'observation', 'auth_user__username']" 
+    
+    filters="['search']"    
     
     actions="['edit', 'delete']"
 
@@ -25,3 +25,5 @@
     queryparams="type=1">
 
 </list-view>
+
+<!-- filters="['title', 'observation', 'auth_user__username']"  -->
