--- a/assets/modules/notification/views/list.html
+++ b/assets/modules/notification/views/list.html
@@ -13,7 +13,7 @@
         {'name':'public', 'label':'Publicado', 'type': 'bool'},        
     ]"
 
-    filters="['title', 'observation']" 
+    filters="['search']" 
 
     actions="['add', 'edit', 'delete']"
 
