--- a/assets/modules/page/views/list.html
+++ b/assets/modules/page/views/list.html
@@ -15,7 +15,7 @@
 
     callback="pageList.convertType"
 
-    filters="['title']" 
+    filters="['search']" 
 
     actions="['add', 'edit', 'delete']"
 
