--- a/assets/modules/user/views/list.html
+++ b/assets/modules/user/views/list.html
@@ -12,7 +12,7 @@
         {'name':'email', 'label':'Email', 'type': 'string'},
     ]"
 
-    filters="['user_cooperative__auth_user__username']" 
+    filters="['search']" 
 
     actions="['add', 'edit', 'delete']"
     
