--- a/assets/modules/cooperative/views/social-list.html
+++ b/assets/modules/cooperative/views/social-list.html
@@ -11,7 +11,7 @@
         {'name':'type', 'label':'Red social', 'type': 'string'},
     ]"
 
-    filters="['name, email']" 
+    filters="['search']" 
 
     actions="['add', 'edit', 'delete']"
     
