Add orderby function in listview

--- a/assets/modules/credit/views/list.html
+++ b/assets/modules/credit/views/list.html
@@ -17,7 +17,10 @@
 
     actions="['add', 'edit', 'delete']"
 
-    rest="credit">
+    rest="credit"
+    
+    default-order="-add_date"
+    >
 
 </list-view>
 
