--- a/assets/modules/common/views/list.html
+++ b/assets/modules/common/views/list.html
@@ -9,19 +9,21 @@
 
 
 <p class="pull-right" ng-if="listView.actions.add">
-    <a href="#{{listView.url}}/new" class="btn btn-success">Agregar</a>
+    <a href="#{{listView.url}}/new" class="btn btn-success">Agregar </a>
 </p>
 
 
 <table class="table table-hover">
     <thead>
         <tr>
-            <th width="{{field.width}}%" ng-repeat="field in listView.fields">{{field.label}}</th>
+            <th width="{{field.width}}%" ng-repeat="field in listView.fields ">
+                <a href="" ng-click="listView.order_column(field.name)">{{field.label}}</a>               
+            </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-        <tr ng-repeat="element in listView.list | orderBy:'-add_date'">
+        <tr ng-repeat="element in listView.list | orderBy:listView.order.predicate:listView.order.reverse">
             <td ng-repeat="field in listView.fields">{{element | fieldValue: field.name | fieldType: field.type }}</td>
 
             <td class="text-right">
