Show search box added

--- a/assets/modules/cooperative/views/email-list.html
+++ b/assets/modules/cooperative/views/email-list.html
@@ -15,7 +15,10 @@
 
     actions="['add', 'edit', 'delete']"
     
-    rest="cooperative/email">
+    rest="cooperative/email"
+
+    show-search-box="false"
+    >
     
 </list-view>
 
