--- a/assets/modules/cooperative/views/social-list.html
+++ b/assets/modules/cooperative/views/social-list.html
@@ -13,7 +13,7 @@
 
     filters="['search']" 
 
-    actions="['add', 'edit', 'delete']"
+    actions="['add', 'edit', 'delete', 'search']"
     
     rest="social">
     
