--- a/assets/modules/credit/views/list.html
+++ b/assets/modules/credit/views/list.html
@@ -15,11 +15,11 @@
 
     filters="['search']" 
 
-    actions="['add', 'edit', 'delete']"
+    actions="['add', 'edit', 'delete', 'search']"
 
     rest="credit"
     
-    default-order="-add_date"
+    default-order="position"
     >
 
 </list-view>
