--- a/assets/modules/notification/views/list.html
+++ b/assets/modules/notification/views/list.html
@@ -15,7 +15,7 @@
 
     filters="['search']" 
 
-    actions="['add', 'edit', 'delete']"
+    actions="['add', 'edit', 'delete', 'search']"
 
     rest="notification_client"
 
