--- a/assets/modules/user/views/list.html
+++ b/assets/modules/user/views/list.html
@@ -14,7 +14,7 @@
 
     filters="['search']" 
 
-    actions="['add', 'edit', 'delete']"
+    actions="['add', 'edit', 'delete', 'search']"
     
     rest="user">
 
