--- a/assets/modules/common/views/list.html
+++ b/assets/modules/common/views/list.html
@@ -1,5 +1,5 @@
 
-<form class="input-group crud-search pull-left" ng-submit="listView.search()" ng-if="listView.showSearchBox">
+<form class="input-group crud-search pull-left" ng-submit="listView.search()" ng-if="listView.actions.search">
     <input ng-model="listView.searchText" type="text" class="form-control" placeholder="busqueda"/>
     <span class="input-group-btn">
         <button title="Buscar" class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span></button>
