--- a/assets/modules/creditRequest/views/list.html
+++ b/assets/modules/creditRequest/views/list.html
@@ -18,7 +18,7 @@
     
     filters="['search']"    
     
-    actions="['edit', 'delete']"
+    actions="['edit', 'delete', 'search']"
 
     rest="credit_request"
 
