--- a/assets/modules/page/views/list.html
+++ b/assets/modules/page/views/list.html
@@ -17,8 +17,11 @@
 
     filters="['search']" 
 
-    actions="['add', 'edit', 'delete']"
+    actions="['add', 'edit', 'delete', 'search']"
 
-    rest="pages">
+    rest="pages"
+    
+    default-order="position"
+    >
 
 </list-view>
