--- a/assets/modules/creditRequest/views/view.html
+++ b/assets/modules/creditRequest/views/view.html
@@ -84,6 +84,13 @@
             </div>
         </div>
 
+        <div class="form-group" ng-if="creditView.data.file != '' && creditView.data.file != null">
+            <label for="inputPassword3" class="col-sm-2 control-label">Archivo:</label>
+            <div class="col-sm-10">
+                <a href="{{creditView.MEDIA}}/{{creditView.data.file}}"  target="_blank"><h5>{{creditView.data.file}}</h5></a>
+            </div>
+        </div>
+
         <div class="form-group">
             <label for="inputPassword3" class="col-sm-2 control-label">Cuota:</label>
             <div class="col-sm-10">
