--- a/assets/css/mixin.less
+++ b/assets/css/mixin.less
@@ -106,6 +106,7 @@
     margin: 40px 0 ;
     position: relative;
     padding-left:70px;
+
     .glyphicon{
         left: 0px;
         position:absolute;
@@ -120,5 +121,10 @@
     }
     p{
         color:#999;
+    }
+
+    img{
+        background: #959393;
+        box-shadow: 0 8px 6px -6px #000;
     }
 }
