--- a/assets/modules/home/views/navbar.html
+++ b/assets/modules/home/views/navbar.html
@@ -40,10 +40,17 @@
                     <li><a href="#/cooperative/update">Base de Datos</a></li>
                 </ul>
             </li>
-
-            <li><a href="" ng-click="logout()">Salir</a></li>
-
         </ul>
+        
+        <ul class="nav navbar-nav navbar-right" >
+            <li class="dropdown">
+                <a href="" data-toggle="dropdown"> <span class="glyphicon glyphicon-user" aria-hidden="true"></span>({{user.username}}) <span class="caret"></span></a>
+                <ul class="dropdown-menu" role="menu">
+                    <li><a href="" ng-click="logout()">Salir</a></li>
+                </ul>
+            </li>
+        </ul>
+
     </div>
 
 </div>
