--- a/assets/modules/page/views/list.html
+++ b/assets/modules/page/views/list.html
@@ -10,7 +10,7 @@
         {'name':'title', 'label':'Titulo', 'type': 'string', width:'40'},
         {'name':'add_date', 'label':'Fecha', 'type': 'date'},
         {'name':'type', 'label':'Tipo', 'type': 'string'},
-        {'name':'public', 'label':'Publicado', 'type': 'bool'},
+        {'name':'published', 'label':'Publicado', 'type': 'bool'},
     ]"
 
     callback="pageList.convertType"
