--- a/assets/modules/cooperative/views/email-list.html
+++ b/assets/modules/cooperative/views/email-list.html
@@ -7,7 +7,7 @@
 
 <list-view 
     fields="[
-        {'name':'name', 'label':'Titulo', 'type': 'string', width:'40'},
+        {'name':'name', 'label':'Título', 'type': 'string', width:'40'},
         {'name':'email', 'label':'Fecha', 'type': 'string'},
     ]"
 
