--- a/assets/modules/cooperative/views/social-form.html
+++ b/assets/modules/cooperative/views/social-form.html
@@ -4,7 +4,7 @@
 <ol class="breadcrumb">
     <li><a href="#/">Inicio</a></li>
     <li><a href="#/cooperative/social">Redes Sociales</a></li>
-    <li class="active">Social network</li>
+    <li class="active">Redes sociales</li>
 </ol>
 
 
