--- a/assets/modules/cooperative/views/social-list.html
+++ b/assets/modules/cooperative/views/social-list.html
@@ -2,12 +2,12 @@
 
 <ol class="breadcrumb">
     <li><a href="#">Inicio</a></li>
-    <li class="active">Social Networks</li>
+    <li class="active">Red social</li>
 </ol>
 
 <list-view 
     fields="[
-        {'name':'name', 'label':'Titulo', 'type': 'string', width:'40'},
+        {'name':'name', 'label':'Título', 'type': 'string', width:'40'},
         {'name':'type', 'label':'Red social', 'type': 'string'},
     ]"
 
