--- a/assets/modules/credit/views/form.html
+++ b/assets/modules/credit/views/form.html
@@ -2,7 +2,7 @@
 
 <ol class="breadcrumb">
 	<li><a href="#">Inicio</a></li>
-	<li><a href="#/cooperative/credits">Creditos</a></li>
+	<li><a href="#/cooperative/credits">Créditos</a></li>
 	<li class="active">{{credit.action == "new" ? "Nuevo" : "Editar"}}</li>
 </ol>
 
