--- a/assets/modules/creditRequest/views/list.html
+++ b/assets/modules/creditRequest/views/list.html
@@ -2,15 +2,15 @@
 
 <ol class="breadcrumb">
     <li><a href="#">Inicio</a></li>
-    <li class="active">Solicitudes de credito</li>
+    <li class="active">Solicitud de crédito</li>
 </ol>
 
 <list-view 
     fields="[
         {'name':'add_date', 'label':'Fecha', 'type': 'date'},        
-        {'name':'user.username', 'label':'Cedula', 'type': 'string'},        
+        {'name':'user.username', 'label':'Documento', 'type': 'string'},        
         {'name':'user.name', 'label':'Nombre', 'type': 'string'},
-        {'name':'credit.name', 'label':'Credito', 'type': 'string'},
+        {'name':'credit.name', 'label':'Crédito', 'type': 'string'},
         {'name':'observation', 'label':'Observación', 'type': 'string', 'width':30},        
         {'name':'processed', 'label':'Proc.', 'type': 'bool'},
         
