--- a/assets/modules/notification/views/list.html
+++ b/assets/modules/notification/views/list.html
@@ -7,7 +7,7 @@
 
 <list-view 
     fields="[
-        {'name':'title', 'label':'Titulo', 'type': 'string', width:'40'},
+        {'name':'title', 'label':'Título', 'type': 'string', width:'40'},
         {'name':'observation', 'label':'Descripción', 'type': 'string'},
         {'name':'add_date', 'label':'Fecha', 'type': 'date'},
         {'name':'public', 'label':'Publicado', 'type': 'bool'},        
