--- a/assets/modules/page/views/list.html
+++ b/assets/modules/page/views/list.html
@@ -2,12 +2,12 @@
 
 <ol class="breadcrumb">
 	<li><a href="#">Inicio</a></li>
-	<li class="active">Paginas</li>
+	<li class="active">Páginas</li>
 </ol>
 
 <list-view 
     fields="[
-        {'name':'title', 'label':'Titulo', 'type': 'string', width:'40'},
+        {'name':'title', 'label':'Título', 'type': 'string', width:'40'},
         {'name':'add_date', 'label':'Fecha', 'type': 'date'},
         {'name':'type', 'label':'Tipo', 'type': 'string'},
         {'name':'published', 'label':'Publicado', 'type': 'bool'},
