--- a/assets/modules/update/views/index.html
+++ b/assets/modules/update/views/index.html
@@ -19,7 +19,7 @@
                 <div ng-hide="update.loading">
                     <div ng-show="update.success">
                         <div class="modal-body">
-                            <div class="alert alert-success" role="alert">La actualizacion del archivo de {{update.current.name}} entró en cola, le enviaremos un correo cuando este lista</div>
+                            <div class="alert alert-success" role="alert">La actualizacion del archivo  entró en cola, le enviaremos un correo cuando este lista.</div>
                         </div>
 
                         <div class="modal-footer">
