--- a/assets/modules/user/views/list.html
+++ b/assets/modules/user/views/list.html
@@ -7,9 +7,9 @@
 
 <list-view 
     fields="[
-        {'name':'username', 'label':'Cedula', 'type': 'string'},
+        {'name':'username', 'label':'Documento', 'type': 'string'},
         {'name':'name', 'label':'Nombre', 'type': 'string', width:'40'},
-        {'name':'email', 'label':'Email', 'type': 'string'},
+        {'name':'email', 'label':'E-mail', 'type': 'string'},
     ]"
 
     filters="['search']" 
