--- a/assets/modules/auth/views/login.html
+++ b/assets/modules/auth/views/login.html
@@ -4,12 +4,12 @@
 
     <img src="{{login.static}}/img/logo.png">
     
-    <h3>Bienvenido asociado</h3>
+    <h3>Bienvenido</h3>
 
     <div ng-show="login.error" class="alert alert-danger" role="alert">
         <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
         <span class="sr-only">Error:</span>
-        Usuario o password incorrectos
+        Usuario o contraseña incorrectos
     </div>
 
     <div ng-hide="login.form" class="loading">
@@ -18,10 +18,10 @@
 
     <form ng-show="login.form" class="form-signin" role="form" ng-submit="login.login()">
         <div class="form-group">
-            <input ng-model="login.username" type="text" class="form-control" placeholder="Cedula" required="" autofocus="">
+            <input ng-model="login.username" type="text" class="form-control" placeholder="Usuario" required="" autofocus="">
         </div>
         <div class="form-group">
-            <input ng-model="login.password" type="password" class="form-control" placeholder="Contraseña" required="">
+            <input ng-model="login.password" type="Contraseña" class="form-control" placeholder="Contraseña" required="">
         </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
     </form>
