--- a/assets/modules/cooperative/views/email-form.html
+++ b/assets/modules/cooperative/views/email-form.html
@@ -30,16 +30,16 @@
 
         <div class="row">
             <div class="form-group col-sm-8">
-                <label class="control-label">Email</label>
+                <label class="control-label">E-mail</label>
                 <input name="email" type="email" class="form-control" ng-model="email.data.email" required>
             
                 <div class="error" ng-show="email.form.email.$invalid && email.form.submitted">
                     <small class="error" ng-show="email.form.email.$error.required">
-                        Ingrese un email
+                        Ingrese un E-mail
                     </small>
 
                     <small class="error" ng-show="email.form.email.$error.email">
-                        Ingrese un email valido
+                        Ingrese un E-mail valido
                     </small>
                 </div>
             </div>
