--- a/assets/modules/groups/views/list.html
+++ b/assets/modules/groups/views/list.html
@@ -12,7 +12,7 @@
 <table class="table table-hover">
 	<thead>
 		<tr>
-			<th width="40%">Titulo</th>
+			<th width="40%">Título</th>
 			<th>Fecha</th>
             <th></th>
 		</tr>
