--- a/assets/modules/home/views/home.html
+++ b/assets/modules/home/views/home.html
@@ -5,7 +5,7 @@
 <div class="user-box ">    
     <span class="glyphicon glyphicon-user" aria-hidden="true"></span>     
     <h1>Bienvenido {{home.username}} </h1>
-    <p>Su ultimo inicio de sesión fue el {{home.last_login | date:'dd/MM/yyyy  HH:mm:ss'}}</p>
+    <p>Su último inicio de sesión fue el {{home.last_login | date:'dd/MM/yyyy  HH:mm:ss'}}</p>
 </div>
 
 
@@ -25,17 +25,17 @@
 
         <li class="green">
             <span class="amount">{{home.stats.credit_request}}</span>
-            <span class="item">Solicitudes de credito</span>
+            <span class="item">Solicitudes de crédito</span>
         </li>
 
         <li class="orange">
             <span class="amount">{{home.stats.notifications}}</span>
-            <span class="item">Notificaciones leidas</span>
+            <span class="item">Notificaciones vistas</span>
         </li>
 
     </ul>
 
-    <h3>Inicio de sessión
+    <h3>Inicio de sesión
 
         <form class="form-inline pull-right">
             <div class="input-group input-daterange">
