--- a/assets/modules/notification/views/form.html
+++ b/assets/modules/notification/views/form.html
@@ -1,6 +1,6 @@
 
 <div id="notification-page">
-    <h1>{{notification.action == "new" ? "Nueva" : "Editar"}} notificacion</h1>
+    <h1>{{notification.action == "new" ? "Nueva" : "Editar"}} notificación</h1>
 
     <ol class="breadcrumb">
     	<li><a href="#">Inicio</a></li>
@@ -31,12 +31,12 @@
 
             <div class="row">
                 <div class="form-group col-sm-8">
-                    <label for="inputEmail3" class="control-label">Titulo</label>
+                    <label for="inputEmail3" class="control-label">Título</label>
                     <input name="title" type="input" class="form-control" ng-model="notification.data.title" required>
                 
                     <div class="error" ng-show="notification.form.title.$invalid && notification.form.submitted">
                         <small class="error" ng-show="notification.form.title.$error.required">
-                            Ingrese un titulo
+                            Ingrese un título
                         </small>
                     </div>
                 </div>
@@ -84,7 +84,7 @@
 
                         <div class="radio">
                             <label class="radio-inline">
-                                <input type="radio" ng-model="notification.data.public" name="type" value="1"> Publica
+                                <input type="radio" ng-model="notification.data.public" name="type" value="1"> Pública
                              </label>
 
                            <label class="radio-inline">
@@ -107,7 +107,7 @@
 
                     <div class="row">
                         <div class="form-group col-sm-6">
-                            <label for="inputEmail3" class="control-label">Buscar asociados por cedula</label>
+                            <label for="inputEmail3" class="control-label">Buscar asociados por documento</label>
                             <div class="row">
                                 <div class="form-group col-sm-10">
                                     <input type="input" class="form-control" ng-model="notification.autocomplete.key">
@@ -134,7 +134,7 @@
                                     <table  class="table  table-striped ">
                                         <thead>                                        
                                             <tr>
-                                                <th>Cédula</th>
+                                                <th>Documento</th>
                                                 <th>Nombre</th>
                                                 <th>Email</th>
                                                 <th></th>
@@ -161,7 +161,7 @@
                     <div class="form-group col-sm-8">
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox" ng-model="notification.data.send_notification" value="1"> Enviar al celular
+                                <input type="checkbox" ng-model="notification.data.send_notification" value="1"> Notificar al celular
                             </label>
                         </div>
                     </div>
