--- a/assets/modules/page/views/form.html
+++ b/assets/modules/page/views/form.html
@@ -2,7 +2,7 @@
 
 <ol class="breadcrumb">
 	<li><a href="#">Inicio</a></li>
-	<li><a href="#/content/page">Paginas</a></li>
+	<li><a href="#/content/page">Páginas</a></li>
 	<li class="active">{{page.action == "new" ? "Nueva" : "Editar"}}</li>
 </ol>
 
@@ -16,11 +16,11 @@
     <form novalidate name="page.form" class="form" role="form" ng-submit="page.submit()">
     	<div class="row">
     		<div class="form-group col-sm-8">
-    			<label for="inputEmail3" class="control-label">Titulo</label>
+    			<label for="inputEmail3" class="control-label">Título</label>
     			<input name="title" type="input" class="form-control" ng-model="page.data.title" required>
                 <div class="error" ng-show="page.form.title.$invalid && page.form.submitted">
                     <small class="error" ng-show="page.form.title.$error.required">
-                        Ingrese un titulo
+                        Ingrese un título
                     </small>
                 </div>
             </div>
@@ -51,7 +51,7 @@
 
     	<div class="row">
     		<div class="form-group col-sm-8">
-    			<label for="inputEmail3" class="control-label">Pagina padre</label>
+    			<label for="inputEmail3" class="control-label">Página padre</label>
 				<select class="form-control" ng-model="page.data.parent">
 					<option value="">Sin padre</option>
 					<option value="{{val.id}}" ng-repeat="(key,val) in page.categories">{{val.title}}</option>
