--- a/assets/modules/creditRequest/views/view.html
+++ b/assets/modules/creditRequest/views/view.html
@@ -2,7 +2,7 @@
 
 <ol class="breadcrumb">
     <li><a href="#">Inicio</a></li>
-    <li><a href="#/request/credit">Solicitudes de credito</a></li>
+    <li><a href="#/request/credit">Solicitudes de crédito</a></li>
     <li class="active">Crédito</li>
 </ol>
 
