--- a/assets/modules/auth/views/login.html
+++ b/assets/modules/auth/views/login.html
@@ -21,7 +21,7 @@
             <input ng-model="login.username" type="text" class="form-control" placeholder="Usuario" required="" autofocus="">
         </div>
         <div class="form-group">
-            <input ng-model="login.password" type="Contraseña" class="form-control" placeholder="Contraseña" required="">
+            <input ng-model="login.password" type="password" class="form-control" placeholder="Contraseña" required="">
         </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
     </form>
