Change error Crédito

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,7 +19,7 @@
 }
 .user-box img {
   background: #959393;
-  box-shadow: 0 8px 6px -6px #000000;
+  box-shadow: 0 8px 6px -6px #000;
 }
 .login-page {
   width: 260px;
@@ -50,7 +50,7 @@
   min-width: 100px;
 }
 #notification-page .autocomplete li:hover {
-  background-color: #f9f9f9;
+  background-color: #F9F9F9;
 }
 #notification-page .user-list {
   margin: 0px;
@@ -69,16 +69,16 @@
   float: right;
 }
 #statistic-page .red {
-  color: #e3515e;
+  color: #E3515E;
 }
 #statistic-page .blue {
-  color: #35b6e0;
+  color: #35B6E0;
 }
 #statistic-page .green {
-  color: #57ad43;
+  color: #57AD43;
 }
 #statistic-page .orange {
-  color: #f7b547;
+  color: #F7B547;
 }
 #statistic-page .data-general {
   list-style: none;
