--- a/assets/modules/credit/views/form.html
+++ b/assets/modules/credit/views/form.html
@@ -1,4 +1,4 @@
-<h1>{{credit.action == "new" ? "Nuevo" : "Editar"}} credito</h1>
+<h1>{{credit.action == "new" ? "Nuevo" : "Editar"}} crédito</h1>
 
 <ol class="breadcrumb">
 	<li><a href="#">Inicio</a></li>
