--- a/assets/modules/creditRequest/views/list.html
+++ b/assets/modules/creditRequest/views/list.html
@@ -1,9 +1,14 @@
-<h1>Solicitud de créditos</h1>
+<h1>Solicitud de créditos  
+    <a href="#" class="btn btn-primary btn-sm ng-scope" ng-disabled="true">
+        <span class="glyphicon glyphicon-download"></span> Descargar
+    </a>
+</h1>
 
 <ol class="breadcrumb">
     <li><a href="#">Inicio</a></li>
-    <li class="active">Solicitud de crédito</li>
+    <li class="active">Solicitud de créditos</li>
 </ol>
+
 
 <list-view 
     fields="[
