--- a/assets/modules/user/views/list.html
+++ b/assets/modules/user/views/list.html
@@ -1,4 +1,10 @@
-<h1>Asociados</h1>
+<h1>Asociados 
+    <a href="#" class="btn btn-primary btn-sm ng-scope" ng-disabled="true">
+        <span class="glyphicon glyphicon-download"></span> Descargar .xslx
+    </a>
+</h1>
+
+
 
 <ol class="breadcrumb">
     <li><a href="#">Inicio</a></li>
