Add button for send xlsx

--- a/assets/modules/creditRequest/views/list.html
+++ b/assets/modules/creditRequest/views/list.html
@@ -1,8 +1,10 @@
 <h1>Solicitud de créditos  
-    <a href="#" class="btn btn-primary btn-sm ng-scope" ng-disabled="true">
-        <span class="glyphicon glyphicon-download"></span> Descargar
-    </a>
+    <button class="btn btn-primary btn-sm ng-scope" ng-disabled="false" ng-click="creditList.download_data()">
+         <span class="glyphicon glyphicon-download"></span> Enviar información .xslx
+    </button>
 </h1>
+
+
 
 <ol class="breadcrumb">
     <li><a href="#">Inicio</a></li>
