--- a/assets/modules/user/views/list.html
+++ b/assets/modules/user/views/list.html
@@ -1,7 +1,7 @@
 <h1>Asociados 
-    <a href="#" class="btn btn-primary btn-sm ng-scope" ng-disabled="true">
-        <span class="glyphicon glyphicon-download"></span> Descargar .xslx
-    </a>
+    <button class="btn btn-primary btn-sm ng-scope" ng-disabled="false" ng-click="userctrl.download_data()">
+         <span class="glyphicon glyphicon-download"></span> Enviar información .xslx
+    </button>
 </h1>
 
 
