--- a/assets/modules/creditRequest/views/list.html
+++ b/assets/modules/creditRequest/views/list.html
@@ -2,6 +2,10 @@
     <button class="btn btn-primary btn-sm ng-scope" ng-disabled="false" ng-click="creditList.download_data()">
          <span class="glyphicon glyphicon-download"></span> Enviar información .xslx
     </button>
+
+    <button class="btn btn-primary btn-sm ng-scope" ng-disabled="false" ng-click="creditList.download_data()">
+         <span class="glyphicon glyphicon-download"></span> Enviar información 2.xslx
+    </button>
 </h1>
 
 
