Fix default order

--- a/assets/modules/creditRequest/views/list.html
+++ b/assets/modules/creditRequest/views/list.html
@@ -29,7 +29,10 @@
 
     rest="credit_request"
 
-    queryparams="type=1">
+    queryparams="type=1"
+
+    default-order="add_date"
+    >
 
 </list-view>
 
