Update type email

--- a/assets/modules/cooperative/views/email-list.html
+++ b/assets/modules/cooperative/views/email-list.html
@@ -9,6 +9,7 @@
     fields="[
         {'name':'name', 'label':'Título', 'type': 'string', width:'40'},
         {'name':'email', 'label':'Fecha', 'type': 'string'},
+        {'name':'type_field', 'label':'Tipo', 'type': 'string'},
     ]"
 
     filters="['search']" 
