Fix erro notificaction

--- a/assets/modules/notification/views/list.html
+++ b/assets/modules/notification/views/list.html
@@ -19,7 +19,9 @@
 
     rest="notification_client"
 
-    query-params="type=1">
+    query-params="type=1"
+     default-order="-add_date"
+     >
 
 </list-view>
 
