--- a/assets/modules/page/views/form.html
+++ b/assets/modules/page/views/form.html
@@ -1,4 +1,4 @@
-<h1>{{page.action == "new" ? "Nueva" : "Editar"}} pagina</h1>
+<h1>{{page.action == "new" ? "Nueva" : "Editar"}} página</h1>
 
 <ol class="breadcrumb">
 	<li><a href="#">Inicio</a></li>
