--- a/assets/modules/creditRequest/views/list.html
+++ b/assets/modules/creditRequest/views/list.html
@@ -1,5 +1,5 @@
 <h1>Solicitud de créditos  
-    <button class="btn btn-primary btn-sm ng-scope" ng-disabled="false" ng-click="creditList.download_data()">
+    <button class="btn btn-primary btn-sm ng-scope" ng-disabled="true" ng-click="creditList.download_data()">
          <span class="glyphicon glyphicon-download"></span> Enviar información .xslx
     </button>
 </h1>
@@ -18,7 +18,7 @@
         {'name':'user.username', 'label':'Documento', 'type': 'string'},        
         {'name':'user.name', 'label':'Nombre', 'type': 'string'},
         {'name':'credit.name', 'label':'Crédito', 'type': 'string'},
-        {'name':'observation', 'label':'Observación', 'type': 'string', 'width':30},        
+        {'name':'observation', 'label':'Observación', 'type': 'string', 'width':30, 'truncate':30},        
         {'name':'processed', 'label':'Proc.', 'type': 'bool'},
         
     ]"
