--- a/assets/modules/groups/views/list.html
+++ b/assets/modules/groups/views/list.html
@@ -20,7 +20,7 @@
 	<tbody>
 		<tr ng-repeat="group in groupList.list">
             <td>{{group.name}}</td>
-			<td>{{group.date}}</td>
+			<td>{{group.date | date:'medium'}}</td>
             <td class="text-right">
                 <a href="#/cooperative/groups/fill/{{group.id}}" class="btn btn-info btn-sm">
                     <span class="glyphicon glyphicon-cloud-upload"></span>
