--- a/assets/modules/credit/views/form.html
+++ b/assets/modules/credit/views/form.html
@@ -92,7 +92,7 @@
                 </div>
                 <div class="form-group col-xs-1">
                     <button ng-click="credit.removeHStore(item)" type="button" class="btn btn-danger btn-sm">
-                        <span class="glyphicon glyphicon-remove">{{item}}</span>
+                        <span class="glyphicon glyphicon-remove"></span>
                     </button>
                 </div>
         	</div>
