--- a/assets/modules/groups/views/fill.html
+++ b/assets/modules/groups/views/fill.html
@@ -29,7 +29,7 @@
     		</div>
     	</div>	
 
-        <h4>Usuarios actualmente en este grupo: ({{groupFill.data.users.length}}=</h4>
+        <h4>Usuarios actualmente en este grupo ({{groupFill.data.users.length}}):</h4>
         <div class="table-scroll table-responsive" >
                 <table  class="table  table-striped ">
                     <thead>                                        
