Update task view

--- a/assets/modules/home/views/navbar.html
+++ b/assets/modules/home/views/navbar.html
@@ -42,6 +42,13 @@
                     <li><a href="#/cooperative/update">Base de Datos</a></li>
                 </ul>
             </li>
+
+            <li class="dropdown">
+                <a href="" data-toggle="dropdown">Tareas <span class="caret"></span></a>
+                <ul class="dropdown-menu" role="menu">
+                    <li><a href="#/tasks/status">Ver estados</a></li>
+                </ul>
+            </li>
         </ul>
         
         <ul class="nav navbar-nav navbar-right" >
