Finish shit of task

--- a/assets/modules/tasks/views/list.html
+++ b/assets/modules/tasks/views/list.html
@@ -5,29 +5,51 @@
     <li class="active">Tareas</li>
 </ol>
 
-<h4 class="text-center" ng-show="taskList.data.length <= 0">No se han procesado tareas</h4>
+<div class="row" ng-show="taskList.data.actives.length <= 0  && taskList.data.waiting.length <= 0 ">
+    <div class="alert alert-success" role="alert">Todas las tareas se han completado</div>
+</div>
 
-<table class="table table-hover" ng-show="taskList.data">
-    <thead>
-        <tr>
-            <th>Id</th>
-            <th>Fecha Procesado</th>
-            <th>Tipo</th>
-            <th>Estado</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr ng-repeat="element in taskList.data | orderBy:'-date_done'">
-           <td>{{element.id}}</td>
-           <td>{{element.date_done | date:'medium'}}</td>
-           <td>{{element.name}}</td>
-            <td>
-                <span ng-show="element.status == 'SUCCESS'" class="label label-success">Finalizado</span>
-                <span ng-show="element.status == 'FAILURE'" class="label label-danger">Error</span>
-                <span ng-show="element.status == 'STARTED'" class="label label-info">Procesando...</span>
-                <span ng-show="element.status == 'RETRY'" class="label label-info">Procesando...</span>
-                <span ng-show="element.status == 'PENDING'" class="label label-default">En cola</span>
-            </td>
-        </tr>
-    </tbody>
-</table>
+<div class="row" ng-show="taskList.data.actives.length > 0 ">
+    <h3>
+    Se esta <span  class="label label-warning">Procesando</span> la siguiente tarea:   
+    </h3>
+    <table class="table table-hover" ng-show="taskList.data">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Tipo de tarea</th>
+                <th>Tiempo de ejecución (seg)</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="element in taskList.data.actives">
+               <td>{{element.id}}</td>
+               <td>{{element.name}}</td>
+               <td>{{element.time_start}}</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
+
+
+<div class="row" ng-show="taskList.data.waiting.length > 0 ">
+    <h3>
+    Tareas en cola para <span  class="label label-default">Procesar </span>:   
+    </h3>
+    <table class="table table-hover" ng-show="taskList.data">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Tipo de tarea</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="element in taskList.data.waiting">
+               <td>{{element.id}}</td>
+               <td>{{element.name}}</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
