Finish shit of task

--- a/assets/modules/tasks/views/list.html
+++ b/assets/modules/tasks/views/list.html
@@ -13,6 +13,7 @@
     <h3>
     Se esta <span  class="label label-warning">Procesando</span> la siguiente tarea:   
     </h3>
+    <p>Cúando esta halla finalizado se le enviará un email.</p>
     <table class="table table-hover" ng-show="taskList.data">
         <thead>
             <tr>
