Finish shit of task

--- a/assets/modules/creditRequest/views/list.html
+++ b/assets/modules/creditRequest/views/list.html
@@ -1,5 +1,5 @@
 <h1>Solicitud de créditos  
-    <button class="btn btn-primary btn-sm ng-scope" ng-disabled="true" ng-click="creditList.download_data()">
+    <button class="btn btn-primary btn-sm ng-scope" ng-disabled="false" ng-click="creditList.download_data()">
          <span class="glyphicon glyphicon-download"></span> Enviar información .xslx
     </button>
 </h1>
