--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -134,7 +134,8 @@ body {
   padding: 0px;
 }
 .navbar-brand {
-  padding: 10px;
+  padding-top: 8px;
+  display: inline-flex;
 }
 .navbar-brand img {
   height: 30px;
@@ -209,4 +210,46 @@ body {
 .table-scroll {
   overflow: scroll;
   height: 400px;
+}
+#loading-logo {
+  stroke-width: 0.9px ;
+  stroke-dasharray: 100;
+  -webkit-animation: dash 4s linear infinite;
+  animation: dash 4s linear infinite;
+  width: 70px;
+  height: 70px;
+}
+.asociados-logo {
+  width: 32px;
+  height: 32px;
+}
+.asociados-logo:hover {
+  -webkit-animation: spin 4s linear infinite;
+  animation: spin 4s linear infinite;
+  -webkit-animation: bounceIn 0.6s;
+  animation: bounceIn 0.6s;
+  -webkit-transition: all 0.6s cubic-bezier(0.8, 1.8, 0.75, 0.75);
+  transition: all 0.6s cubic-bezier(0.8, 1.8, 0.75, 0.75);
+  cursor: pointer;
+  -webkit-transform: rotate(720deg) scale(1);
+  -ms-transform: rotate(720deg) scale(1);
+  transform: rotate(720deg) scale(1);
+  stroke-width: 1px;
+  stroke-dasharray: 100;
+}
+@-webkit-keyframes dash {
+  from {
+    stroke-dashoffset: 1000;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+@keyframes dash {
+  from {
+    stroke-dashoffset: 1000;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
 }
