--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -13,7 +13,7 @@ body {
     padding:0px;
 }
 
-.navbar-brand{
+.navbar-brand-header{
     padding-top: 8px;
     display: inline-flex;
     img{
@@ -107,11 +107,11 @@ body {
 
 
 .asociados-logo{  
-  width: 32px;
-  height: 32px;
+  width: 37px;
+  height: 37px;
 }
 
-.asociados-logo:hover {
+.navbar-brand-header:hover  .asociados-logo, .asociados-logo:hover {
   -webkit-animation:      spin 4s linear infinite;
           animation:      spin 4s linear infinite; 
   -webkit-animation:      bounceIn 0.6s; 
@@ -125,6 +125,8 @@ body {
   stroke-width: 1px;
   stroke-dasharray: 100;
 }
+
+
 
 @-webkit-keyframes dash {
   from {
