--- a/assets/modules/home/views/navbar.html
+++ b/assets/modules/home/views/navbar.html
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#/">
+        <a class="navbar-brand-header" href="#/">
             <svg class="asociados-logo"  xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 45.6 49.3" enable-background="new 0 0 45.6 49.3" xml:space="preserve">
                 <metadata>
                     <sfw  xmlns="&ns_sfw;">
