little changes pagination

--- a/assets/modules/common/views/list.html
+++ b/assets/modules/common/views/list.html
@@ -48,6 +48,10 @@
     class="pagination-lg" 
     ng-change="listView.setPage()"
     previous-text="Anterior"
-    next-text="Siguiente">
+    next-text="Siguiente"
+    boundary-links="true"
+    last-text="»"
+    first-text="«"
+    >
     </pagination>
 </div>
