Add module terms and conditions

--- a/assets/modules/home/views/navbar.html
+++ b/assets/modules/home/views/navbar.html
@@ -58,6 +58,9 @@
                     
                     <li><a href="#/cooperative/social">Redes Sociales</a></li>
                     <li><a href="#/cooperative/update">Base de Datos</a></li>
+
+                    <li><a href="#/cooperative/terms">Términos y condiciones</a></li>
+                    
                 </ul>
             </li>
 
