Update error 'selecicone'

--- a/assets/modules/page/views/form.html
+++ b/assets/modules/page/views/form.html
@@ -30,7 +30,7 @@
     		<div class="form-group col-sm-8">
     			<label for="inputEmail3" class="control-label">Tipo</label>
 				<select name="type" ng-model="page.data.type" class="form-control" required>
-					<option value="">Selecicone</option>
+					<option value="">Seleccione</option>
 					<option value="1">Categoria</option>
 					<option value="2">Contenido</option>
 				</select>
